# catsay

./: .gitignore  Cargo.toml  README.md  cat.txt  rustfmt.toml
.trunk/: trunk.yaml
rust/: Cargo.toml
rust/src/: main.rs  modules.rs
rust/src/modules/: cmds.rs  input.rs  utils.rs
src/: main.rs
src/modules/: cmds.rs  input.rs
