[package]
name = "catsay"
version = "1.0.0"
authors = ["Davi Reis <reis.davi11010@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple cowsay with a cat!"
readme = "./README.md"
homepage = "https://github.com/dreisss/catsay"
repository = "https://github.com/dreisss/catsay"
keywords = ["cli", "cowsay", "catsay"]
categories = ["command-line-utilities", "cowsay"]

[dependencies]
