[package]
name = "catsay"
version = "0.1.4"
authors = ["Davi Reis <reis.davi11010@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple cowsay with a cat!"
readme = "https://github.com/dreisss/catsay/blob/main/README.md"
homepage = "https://github.com/dreisss/catsay"
repository = "https://github.com/dreisss/catsay"
keywords = ["cli", "cowsay", "catsay"]
categories = ["command-line-utilities", "cowsay"]

[dependencies]
